k8s/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: customer
  ports:
    - port: 8001
      targetPort: 8001
