k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: staging
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 8000
      targetPort: 80
