k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - port: 8002
      targetPort: 8002
