k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
    - port: 8003
      targetPort: 8003
