k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: staging
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8003
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8002
      - path: /customers
        pathType: Prefix
        backend:
          service:
            name: customer-service
            port:
              number: 8001
